<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:minHeight="400dp">

    <EditText
    android:id="@+id/titulo"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:hint="@string/hintTitulo"
    android:layout_marginBottom="16dp"/>

<EditText
android:id="@+id/descripcion"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/hintDescripcion"
android:layout_marginBottom="16dp"/>

<EditText
android:id="@+id/tipo"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/hintTipo"
android:layout_marginBottom="16dp"/>

<EditText
android:id="@+id/enlace"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/hintEnlace"
android:layout_marginBottom="16dp"/>

<EditText
android:id="@+id/imagen"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/hintImagen"
android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnagg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:text="@string/btnCancelar"/>

    </LinearLayout>

    </LinearLayout>
